cropping bug fixes; attachment validations; loading spinner

--- a/app/assets/templates/modals/new_photo.jst.ejs
+++ b/app/assets/templates/modals/new_photo.jst.ejs
@@ -16,7 +16,7 @@
         <i class="fa fa-crop" id="crop"></i>
       </div>
       
-      <div class="thumbnail">
+      <div class="thumbnail jcrop">
         <img id="preview" src="#">
       </div>
       
