--- a/app/assets/templates/users/index.jst.ejs
+++ b/app/assets/templates/users/index.jst.ejs
@@ -1,2 +1,6 @@
-<table class="table">
-</table>
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-3">
+    <table class="table">
+    </table>
+  </div>
+</div>
