--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,6 +55,10 @@ i.active {
   color: #ddd;
 }
 
+.jcrop img {
+  max-width: none;
+}
+
 .navbar-inverse {
   background-color: #333;
 }
@@ -77,6 +81,7 @@ i.active {
   width: 50px;
   height: 50px;
 }
+
 .thumbnail {
   background-color: #333;
   border: none;
