--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,18 +61,25 @@
   
   
   <div class="container">
-    
-    <div>
-      <%= flash[:failure] if flash[:failure] %>
-    </div>
+    <% if flash[:failure] %>
+      <div class="row">
+        <div class="alert alert-danger col-xs-4">
+          <%= flash[:failure] %> 
+        </div>
+      </div>
+    <% end %>
   
-    <div>
-      <ul>
-        <% flash[:errors].try(:each) do |error| %>
-          <li><%= error %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% if flash[:errors] %>
+      <div class="row">
+        <div class="alert alert-danger col-xs-4">
+          <ul>
+            <% flash[:errors].try(:each) do |error| %>
+              <li><%= error %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    <% end %>
   
     <div>
       <%= yield %>
