--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,11 @@
-<h1>You have reached the Root.</h1>
+<div id="carousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="..." alt="...">
+    </div>
+    <div class="item">
+    </div>
+    <div class="item">
+    </div>
+  </div>
+</div>
