add email column; style forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,10 @@ i.active {
   max-width: none;
 }
 
+.jumbotron {
+  background-color: #222;
+}
+
 .navbar-inverse {
   background-color: #333;
 }
