--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,4 @@
-<div id="carousel" class="carousel slide" data-ride="carousel">
+<!-- <div id="carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="item active">
       <img src="..." alt="...">
@@ -8,4 +8,11 @@
     <div class="item">
     </div>
   </div>
+</div> -->
+
+<div class="jumbotron">
+  <h1>silverprint.</h1>
+  <p>
+    the web instagram you've been secretly wishing for.
+  </p>
 </div>
