--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,27 @@
 <h1>Sign up</h1>
 
 <%= form_for @user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
-  <br>
-  
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <br>
-  
-  <%= f.submit "Sign up", :class => "btn btn-default" %>
-  
+  <div class="row">
+    <div class="form-group col-xs-4">
+      <%= f.label :username %>
+      <%= f.text_field :username, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-xs-4">
+      <%= f.label :email %>
+      <%= f.text_field :email, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-xs-4">
+      <%= f.label :password %>
+      <%= f.password_field :password, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-4">
+      <%= f.submit "Sign up", :class => "btn btn-default btn-sm" %>
+    </div>
+  </div>
 <% end %>
