--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,12 +55,18 @@ i.active {
   color: #ddd;
 }
 
+.btn-success {
+  color: #333;
+}
+
 .jcrop img {
   max-width: none;
 }
 
 .jumbotron {
   background-color: #222;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .navbar-inverse {
@@ -114,6 +120,7 @@ body.dragging, body.dragging * {
   background-color: #333;
   border: 1px solid transparent;
   height: 400px;
+  position: relative;
   width: 400px;
 }
 
