demo account popovers

--- a/app/assets/templates/modals/new_photo.jst.ejs
+++ b/app/assets/templates/modals/new_photo.jst.ejs
@@ -39,7 +39,7 @@
         <input type="hidden" id="height" name="photo[height]" value="">
       </div>
       
-      <button type="submit" class="btn btn-default btn-sm">
+      <button type="submit" class="btn btn-default btn-sm" id="add">
         add
       </button>
     </div>
