--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -35,7 +35,8 @@
     <div id="profile-pic" class="photo-container">
     </div>
 
-    <div class="btn-group">
+    <div id="wrapper">
+    <div class="btn-group" id="show-bar">
       <button class="btn btn-link" id="grid">
         <span class="glyphicon glyphicon-th-large"></span>
       </button>
@@ -51,6 +52,7 @@
         </button>
       <% } %>
     </div>
+  </div>
   </div>
 </div>
 
