--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,11 @@ i.active {
   margin-bottom: 40px;
 }
 
+.popover-content {
+  color: #222;
+  font-size: 12px;
+}
+
 .profile-pic {
   width: 200px;
   height: 200px;
