--- a/app/assets/templates/users/feed.jst.ejs
+++ b/app/assets/templates/users/feed.jst.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="btn-group col-xs-3 col-xs-offset-1" data-toggle="buttons">
+  <div class="btn-group col-xs-3 col-xs-offset-1" id="toggle-view" data-toggle="buttons">
     <label id="grid" class="btn btn-link">
       <input type="radio">
       <span class="glyphicon glyphicon-th-large"></span>
