--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -12,7 +12,7 @@
         <% } %>
       </div>
      
-      <h1><%= user.get('username') %></h1>
+      <h1><%= user.escape('username') %></h1>
       
       <div class="col-xs-offset-6">
         <h5><%= user.get("photos").length %> posts</h5>
