--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -169,6 +169,14 @@ ol.sortable li.placeholder:before {
   background-color: #ddd;
 }
 
+div.about-text {
+  padding: 30px;
+}
+
+p.about-text {
+  margin-bottom: 30px;
+}
+
 td.follow {
   margin: auto;
 }
